# galactic-bridge-icp

./: Cargo.toml  README.md  canister_ids.json  dfx.json
scripts/: deploy.sh  deploy_all.sh  deploy_ledger.sh  deploy_minter.sh  export.sh  update_minter.sh
src/galactic_bridge_icp_backend/: Cargo.toml  galactic_bridge_icp_backend.did
src/galactic_bridge_icp_backend/src/: address.rs  blocklist.rs  checked_amount.rs  dashboard.rs  deposit.rs  endpoints.rs  eth_rpc.rs  lib.rs  lifecycle.rs  main.rs  map.rs  memo.rs  state.rs  tx.rs  withdraw.rs
src/galactic_bridge_icp_backend/src/cbor/: mod.rs
src/galactic_bridge_icp_backend/src/crypto_ecdsa_secp256k1/: mod.rs
src/galactic_bridge_icp_backend/src/eth_logs/: mod.rs
src/galactic_bridge_icp_backend/src/eth_rpc_client/: mod.rs  providers.rs
src/galactic_bridge_icp_backend/src/eth_rpc_error/: mod.rs
src/galactic_bridge_icp_backend/src/guard/: mod.rs
src/galactic_bridge_icp_backend/src/lifecycle/: init.rs
src/galactic_bridge_icp_backend/src/numeric/: mod.rs
src/galactic_bridge_icp_backend/src/solana_rpc_client/: errors.rs  mod.rs  requests.rs  responses.rs
src/galactic_bridge_icp_backend/src/state/: event.rs
src/galactic_bridge_icp_backend/src/state/transactions/: mod.rs
src/minter/: Cargo.toml  minter.did
src/minter/src/: constants.rs  deposit.rs  lib.rs  lifecycle.rs  main.rs  state.rs  storage.rs  types.rs  utils.rs  withdraw.rs
src/minter/src/cbor/: mod.rs
src/minter/src/events/: mod.rs
src/minter/src/guard/: mod.rs
src/minter/src/sol_rpc_client/: mod.rs  providers.rs  requests.rs  responses.rs  types.rs
src/minter/src/state/: audit.rs  event.rs
