[package]
name = "galactic_bridge_icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "galactic_bridge_icp_backend"
path = "src/main.rs"


[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
candid = { version = "0.10.2" }
candid_parser = { version = "0.1.2" }
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.3"
ic-cdk-timers = "0.6.0"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.107", features = ["std"] }
ethnum = { version = "1.3.2", features = ["serde"] }
hex-literal = "0.4.1"
ic-canister-log = "0.2.0"
thiserror = "1.0"
thousands = "0.2"
futures = "0.3.28"
hex = "0.4"
rlp = "0.5.2"
ic-metrics-encoder = "1"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
ic-stable-structures = "0.6.2"
time = { version = "0.3.20", features = ["formatting"] }

ic-ethereum-types = {git = "https://github.com/dfinity/ic.git"}
phantom_newtype = {git = "https://github.com/dfinity/ic.git"}
ic-utils-ensure = {git = "https://github.com/dfinity/ic.git"}
ic-crypto-sha3 = {git = "https://github.com/dfinity/ic.git"}
icrc-ledger-client-cdk = {git = "https://github.com/dfinity/ic.git"}
icrc-ledger-types = {git = "https://github.com/dfinity/ic.git"}
ic-management-canister-types = {git = "https://github.com/dfinity/ic.git"}
ic-canisters-http-types = {git = "https://github.com/dfinity/ic.git"}
ic-crypto-ecdsa-secp256k1 = {git = "https://github.com/dfinity/ic.git"}
