[package]
name = "minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
hex = "0.4.3"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
k256 = { version = "0.12.0", features = ["ecdsa"] }
serde = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
sha3 = "0.10.8"
libsecp256k1 = "0.7.1"
tiny-keccak = "2.0.2"
ethereum-types = "0.14.1"
num-traits = "0.2.18"

icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic.git"}
icrc-ledger-types = { git = "https://github.com/dfinity/ic.git"}
ic-base-types = { git = "https://github.com/dfinity/ic.git"}
